--- a/product-landing-page/product-page-styles/main.css
+++ b/product-landing-page/product-page-styles/main.css
@@ -1,5 +1,214 @@
+/*  Global Styles  */
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+
+:root {
+    font-size: 18px;
+    font-family: "Lato", sans-serif;
+}
+
+/*  Navigavation bar  */
+
+.header-container {
+    position: relative;
+    height: 80px;
+    z-index: 100;
+    width: 100vw;
+}
+.header-container {
+    position: relative;
+    height: 80px;
+    z-index: 100;
+    width: 100vw;
+}
+
+#header {
+    justify-content: space-between;
+    width: 100%;
+    background-color: hwb(36 73% 0%);
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+#header-img {
+    height: 60px;
+    width: auto;
+    padding: 10px;
+}
+
+#nav-bar ul {
+    display: flex;
+    list-style-type: none;
+}
+
+.nav-link {
+    text-decoration: none;
+    margin-right: 30px;
+    color: hwb(0 5% 95%);
+}
+
+/* CTA And Product Section */
+
+.cta-section {
+    gap: 50px;
+    background-color: hwb(0 98% 2%);
+    padding: 100px 0;
+}
+.cta-section p {
+    padding: 0 50px;
+}
+
+input[type="email"] {
+    padding: 8px;
+    font-size: 18px;
+}
+
+input[type="email"]:focus {
+    outline: none;
+    border: 2px solid hwb(36 12% 3%);
+    box-shadow: 0 0 5px hwb(0 50% 50%);
+}
+#submit {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+}
+
+/* Product Section */
+
+.product-section {
+    gap: 50px;
+    padding: 100px 50px;
+    background-color: hwb(37 94% 0%);
+}
+
+.product-img img {
+    width: 100%;
+    border-radius: 8px;
+}
+
+/* Product Features Section  */
+
+.product-features-contaner {
+    padding: 50px 0;
+    /* border-radius: 8px; */
+    background-color: hwb(0 98% 2%);
+}
+.product-features {
+    width: 100%;
+    padding: 50px;
+}
+.product-feature-text,
+.product-feature-img {
+    flex: 1;
+    margin: 40px;
+    gap: 20px;
+}
+.product-feature-text h4 {
+    padding-bottom: 30px;
+}
+.product-feature-img iframe {
+    width: 100%;
+    height: 400px;
+    border: none;
+    border-radius: 8px;
+}
+.product-feature-img img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+}
+.display-first {
+    order: -1;
+}
+
+/* Product Price Section */
+
+.product-price-contaner {
+    margin: 150px auto;
+}
+.product-price-tile {
+    gap: 40px;
+    margin: 20px;
+    padding: 40px;
+    border-radius: 5px;
+    background-color: hwb(0 98% 2%);
+    box-shadow: 0 2px 4px hwb(36 12% 3%);
+}
+.product-price-tile ul {
+    list-style: none;
+}
+
+/* Footer Section */
+footer {
+    padding: 100px;
+    background-color: hwb(0 83% 17%);
+}
+.footer-content-box {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+footer ul {
+    list-style: none;
+}
+footer a {
+    text-decoration: none;
+    color: hwb(0 20% 90%);
+    transition: color 0.3s;
+}
+footer a:hover {
+    color: hwb(240 0% 0%);
+    text-decoration: underline;
+}
+.social-icons {
+    display: flex;
+    gap: 12px;
+    font-size: 1.3rem;
+}
+.fa-facebook-f {
+    background-color: hwb(214 9% 5%);
+    color: whitesmoke;
+    padding: 2px 6px;
+    border-radius: 4px;
+    transition: transform 0.3s ease-in-out;
+}
+.fa-facebook-f:hover {
+    transform: scale(1.2);
+}
+.fa-x-twitter {
+    padding: 2px;
+    border-radius: 4px;
+    background-color: hwb(0 0% 100%);
+    color: hwb(0 96% 4%);
+    transition: transform 0.3s ease-in-out;
+}
+.fa-x-twitter:hover {
+    transform: scale(1.2);
+}
+.fa-discord {
+    padding: 2px;
+    border-radius: 4px;
+    color: hwb(0 96% 4%);
+    background-color: hwb(240 13% 7% / 0.7);
+    transition: transform 0.3s ease-in-out;
+}
+.fa-discord:hover {
+    transform: scale(1.2);
+}
+.fa-youtube {
+    padding: 2px 4px;
+    border-radius: 4px;
+    background-color: hwb(0 96% 4%);
+    color: hwb(0 4% 28%);
+    transition: transform 0.3s ease-in-out;
+}
+.fa-youtube:hover {
+    transform: scale(1.2);
 }
