style: add css styles to the webpage

--- a/portfolio-webpage/portfolio-css/styles.css
+++ b/portfolio-webpage/portfolio-css/styles.css
@@ -152,7 +152,7 @@ main {
     font-size: 1.2rem;
 }
 
-/* Contact Section */
+/* Contact and Footer Sections */
 
 .contact-section {
     display: flex;
